# Lab3Redes

./: Makefile  README.md  pyproject.toml
configs/: names-sample.json  redis.json  topo-sample.json  topology.json  topology1.json  topology1_prueba.json
extras/redis/: asyncpubsub.py  asyncpubsub.py:Zone.Identifier  subscriber.py  subscriber.py:Zone.Identifier
src/: cli.py  graph.py  message.py  node.py  routing_table.py  transport.py
src/algorithms/: flooding.py  lsr.py
src/netlab/: common_protocol.py  forwarding.py  routing_core.py  run_redis.py  topo_loader.py
src/netlab/algorithmspt1/: dijkstra.py
src/netlab/algorithmspt2/: distance_vector.py  flooding.py  link_state.py
