[project]
name = "mcp-chatbot"
version = "0.4.0"
description = "NetLab (Redis) con Flooding, Distance Vector y Link-State"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["networkx>=3.2.1", "ujson>=5.10.0", "redis>=5.0.4"]

[project.scripts]
netlab-redis = "netlab.run_redis:MAIN"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
